[PRMP-1519] - Fix long name overflow on small screen sizes

--- a/app/src/styles/App.scss
+++ b/app/src/styles/App.scss
@@ -272,6 +272,12 @@ $hunit: '%';
         &_patient-info {
             p {
                 font-size: 1.2rem;
+                word-break: break-word;
+                overflow-wrap: break-word;
+            }
+            span {
+                overflow-wrap: break-word;
+                word-break: break-word;
             }
         }
 
